# mayastor-dependencies

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  commitlint.config.js  config.nix  default.nix  shell.nix
.github/workflows/: pr-commitlint.yml  pr-rust-lint.yaml
api/io-engine/: Cargo.toml  build.rs
api/io-engine/protobuf/v1/: registration.proto  replica.proto
api/io-engine/src/: v0.rs
apis/events/: Cargo.toml  build.rs
apis/events/protobuf/v1/: event.proto
apis/events/src/: event_traits.rs  lib.rs  mbus_nats.rs
apis/events/src/common/: errors.rs  retry.rs
apis/io-engine/: Cargo.toml  build.rs
apis/io-engine/protobuf/: mayastor.proto
apis/io-engine/protobuf/v1/: bdev.proto  common.proto  host.proto  json.proto  nexus.proto  pool.proto  registration.proto  replica.proto  snapshot-rebuild.proto  snapshot.proto  stats.proto  test.proto
apis/io-engine/protobuf/v1-alpha/: registration.proto
apis/io-engine/src/: v0.rs  v1.rs
composer/: .pre-commit-config.yaml  Cargo.toml
composer/src/: composer.rs  lib.rs  rpc.rs
devinfo/: Cargo.toml  build.rs
devinfo/src/: block_device.rs  lib.rs
devinfo/src/blkid/: partition.rs  probe.rs
devinfo/src/mountinfo/: bytebuf.rs  error.rs  io_utils.rs  mod.rs
devinfo/src/partition/: mod.rs
event-publisher/: Cargo.toml
event-publisher/src/: common.rs  event_handler.rs  event_layer.rs  lib.rs  publisher.rs
event-publisher/src/common/: constants.rs
events-api/: Cargo.toml  build.rs
events-api/protobuf/v1/: event.proto
events-api/src/: event_traits.rs  lib.rs  mbus_nats.rs  message.rs
events-api/src/common/: errors.rs
git-version-macro/src/: lib.rs  utils.rs
mbus-api/: Cargo.toml
mbus-api/src/: common.rs  mbus_nats.rs
mbus-api/src/common/: constants.rs  retry.rs
nix/: overlay.nix  sources.json
nvmeadm/: Cargo.toml
nvmeadm/src/: error.rs  lib.rs  nvme_namespaces.rs  nvme_uri.rs  nvmf_discovery.rs  nvmf_subsystem.rs
nvmeadm/tests/: discovery_test.rs
prost-extend/: Cargo.toml  build.rs
prost-extend/protobuf/v1/: pb_time.proto
prost-extend/src/: duration.rs  lib.rs  timestamp.rs
scripts/: check-coredumps.sh  git-org-name.sh  release.sh
scripts/rust/: linter.sh  style.sh
sysfs/src/: lib.rs
tracing-filter/: Cargo.toml
tracing-filter/src/: lib.rs
version-info/: Cargo.toml
version-info/src/: git_utils.rs  lib.rs  macros.rs  version_info.rs
