[package]
name = "composer"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = [ "full" ] }
futures = "0.3.21"
tracing = "0.1.35"
once_cell = "1.13.0"
ipnetwork = "0.20.0"
bollard = "0.11.0"
