[package]
name = "devinfo"
version = "1.0.0"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"

[dependencies]
snafu = "0.7.5"
url = "2.4.1"
uuid = { version = "1.4.1", features = ["v4"] }
[build-dependencies]
bindgen = "0.64.0"

[target.'cfg(target_os="linux")'.dependencies]
udev = "0.7.0"
