[package]
name = "event-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
tokio = { version = "1.32.0"}
tracing = "0.1.37"
serde_json = "1.0.107"
events-api = { path = "../apis/events" }

[dev-dependencies.serde]
# v1.0.198 introduces a breaking change by making use of unstable feature saturating_int_impl!
# Let's ensure we don't use v.1.0.198 or newer until we upgrade the compiler!
# https://github.com/serde-rs/serde/issues/2734
version = ">=1.0.188,<1.0.198"