[package]
name = "events-api"
version = "0.1.0"
edition = "2021"


[build-dependencies]
tonic-build = "0.8.4"

[dependencies]
async-nats = "0.29.0"
bytes = "1.4.0"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = "1.25.0"
tracing = "0.1.37"
uuid = { version = "1.3.0", features = ["v4"] }
async-trait = "0.1.64"
futures = "0.3.26"
snafu = "0.7.4"
tonic = "0.8.3"
prost = "0.11.6"
prost-wkt-types = "0.4.0"
chrono = "0.4.23"
once_cell = "1.17.0"
