[package]
name = "events-api"
version = "0.1.0"
edition = "2021"


[build-dependencies]
tonic-build = "0.8.4"

[dependencies]
async-nats = "0.29.0"
bytes = "1.4.0"
serde = "1.0.183"
serde_json = "1.0.104"
tokio = "1.30.0"
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4"] }
async-trait = "0.1.72"
futures = "0.3.28"
snafu = "0.7.5"
tonic = "0.8.3"
prost = "0.11.9"
prost-wkt-types = "0.4.2"
chrono = "0.4.26"
once_cell = "1.18.0"
