[package]
name = "events-api"
version = "0.1.0"
edition = "2021"


[build-dependencies]
tonic-build = "0.9.2"

[dependencies]
async-nats = "0.32.1"
bytes = "1.5.0"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = "1.32.0"
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4"] }
async-trait = "0.1.73"
futures = "0.3.28"
snafu = "0.7.5"
tonic = "0.9.2"
prost = "0.11.9"
prost-wkt-types = "0.4.2"
chrono = "0.4.31"
once_cell = "1.18.0"
prost-extend = { path = "../prost-extend" }
