[package]
name = "nvmeadm"
version = "1.0.0"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"

[dependencies]
derive_builder = "0.12.0"
enum-primitive-derive = "0.2.2"
glob = "0.3.1"
ioctl-gen = "0.1.1"
libc = "0.2.139"
nix = { version = "0.26.2", default-features = false, features = [ "ioctl" ] }
num-traits = "0.2.15"
once_cell = "1.17.0"
snafu = "0.7.4"
uuid = { version = "1.3.0", features = ["v4"] }
url = "2.3.1"
