[package]
name = "nvmeadm"
version = "1.0.0"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"

[dependencies]
derive_builder = "0.12.0"
enum-primitive-derive = "0.2.2"
glob = "0.3.1"
ioctl-gen = "0.1.1"
libc = "0.2.147"
nix = { version = "0.26.2", default-features = false, features = [ "ioctl" ] }
num-traits = "0.2.16"
once_cell = "1.18.0"
snafu = "0.7.5"
uuid = { version = "1.4.1", features = ["v4"] }
url = "2.4.0"
