[package]
name = "version-info"
version = "0.1.0"
edition = "2018"
authors = [
  "Dmitry Savitskiy <dmitry.savitsky@mayadata.io>",
]

[dependencies]
git-version-macro = { path = "../rust-git-version/git-version-macro" }
regex = "1"

[features]
default = [ "default-git-versions" ]
default-git-versions = [ ]
git-version-stale = [ "default-git-versions" ]
git-version-fallback = [ ]