[package]
name = "io-engine-api"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.10.2"
prost-build = "0.12.1"

[dependencies]
tonic = "0.10.2"
bytes = "1.5.0"
prost = "0.12.1"
prost-derive = "0.12.1"
prost-extend = { path = "../../prost-extend" }
prost-types = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"

[dev-dependencies.serde]
# v1.0.198 introduces a breaking change by making use of unstable feature saturating_int_impl!
# Let's ensure we don't use v.1.0.198 or newer until we upgrade the compiler!
# https://github.com/serde-rs/serde/issues/2734
version = ">=1.0.188,<1.0.198"